--- a/now.json
+++ b/now.json
@@ -2,7 +2,7 @@
   "version": 2,
   "alias": "serve-marked",
   "builds": [
-    { "src": "now-index.js", "use": "now-micro" }
+    { "src": "now-index.js", "use": "@now/node" }
   ],
   "routes": [
     {
