--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "2.0.3",
   "description": "Serve markdown file as index.html",
   "repository": "amio/serve-marked",
-  "main": "index.js",
+  "main": "dist/index.min.js",
   "author": "Amio <amio.cn@gmail.com>",
   "license": "ISC",
+  "scripts": {
+    "build": "npx esbuild --bundle src/index.ts --minify --loader:.css=text --outdir=dist --platform=node"
+  },
   "dependencies": {
     "marked": "^1.1.0"
   },
   "keywords": [
     "serve",
-    "markdown"
-  ]
+    "markdown",
+    "single",
+    "index",
+    "html"
+  ],
+  "devDependencies": {
+    "@types/node": "^14.0.5"
+  }
 }
