--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.1.1",
   "description": "Serve markdown file as index.html",
   "repository": "amio/serve-marked",
-  "main": "dist/index.min.js",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "Amio <amio.cn@gmail.com>",
   "license": "ISC",
