--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "author": "Amio <amio.cn@gmail.com>",
   "license": "ISC",
   "scripts": {
-    "build": "npx esbuild --bundle src/index.ts --minify --loader:.css=text --outdir=dist --platform=node --external:marked",
+    "build": "esbuild --bundle src/index.ts --minify --loader:.css=text --outdir=dist --platform=node --external:marked",
     "prepack": "npm run build"
   },
   "dependencies": {
-    "marked": "^1.1.0"
+    "marked": "^4.0.16"
   },
   "keywords": [
     "serve",
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "@types/node": "^14.0.5",
+    "esbuild": "^0.14.39",
     "typescript": "^4.1.3"
   }
 }
