Sanitize marked HTML output

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepack": "npm run build"
   },
   "dependencies": {
-    "marked": "^4.0.16"
+    "marked": "^4.0.16",
+    "sanitize-html": "^2.7.2"
   },
   "keywords": [
     "serve",
